[package]
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
description = "(work in progress) Idiomatic platform layer in the likes of SDL2 and SFML."
documentation = "https://docs.rs/dmc"
keywords = ["sdl2", "window", "opengl"]
categories = [ "multimedia", "game-engines" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/yoanlcq/dmc"
name = "dmc"
version = "0.2.0" # remember to update html_root_url

[dependencies]
log = "0.4.1"
vek = "0.9"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11 = { version = "2.16.0", features = ["xlib", "glx", "xinput", "xrender"] }
libc = "0.2.26"

[target.'cfg(target_os = "linux")'.dependencies]
libevdev-sys = "0.1.1"
libudev-sys = "0.1.3"
