[package]
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
description = "(work in progress) Idiomatic platform layer in the likes of SDL2 and SFML."
documentation = "https://docs.rs/dmc"
keywords = ["sdl2", "window", "opengl"]
categories = [ "multimedia", "game-engines" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/yoanlcq/dmc"
name = "dmc"
readme = "README.md"
version = "0.2.0" # remember to update html_root_url
build = "build.rs"
exclude = [
    "ci/*",
    "appveyor.yml",
    ".travis.yml",
]

[badges]
travis-ci = { repository = "yoanlcq/vek" }
appveyor  = { repository = "yoanlcq/vek" }
maintenance = { status = "experimental" }

[build-dependencies]
rustc_version = "~0.2.1"

[dependencies]
log = "0.4.1"
vek = "0.9"
uuid = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "~0.3.4", features = ["winuser", "libloaderapi", "winbase", "winerror", "windowsx", "errhandlingapi", "wingdi"] }

[target.'cfg(unix)'.dependencies]
nix = "~0.10"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11 = { version = "~2.17.5", features = ["xlib", "glx", "xinput", "xrender", "xrandr"] }
libc = "~0.2.26"

[target.'cfg(target_os = "linux")'.dependencies]
libevdev-sys = "~0.1.1"
libudev-sys = "~0.1.3"
