[package]
name = "main"
version = "0.1.0"
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
build = "build.rs"

[features]
headless = [] # For testing on CI

[build-dependencies]
rustc_version = "~0.2.1"

[dependencies]
dmc = { path = "../.." }
log = "0.4.1"
env_logger = "0.5.6"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11 = { version = "~2.17.5", features = ["xlib", "glx", "xinput", "xrender"] }
